--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -337,12 +337,43 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# Tuning hyper-parameters for precision\n",
+      "# Tuning hyper-parameters for f1\n",
+      "\n",
+      "Best parameters set found on development set:\n",
+      "\n",
+      "{'C': 100, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+      "\n",
+      "Grid scores on development set:\n",
+      "\n",
+      "0.930 (+/-0.161) for {'C': 100, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+      "0.930 (+/-0.151) for {'C': 100, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
+      "\n",
+      "Detailed classification report:\n",
+      "\n",
+      "The model is trained on the full development set.\n",
+      "The scores are computed on the full evaluation set.\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      0.99      0.99     22428\n",
+      "           1       0.98      0.98      0.98     12189\n",
+      "\n",
+      "    accuracy                           0.99     34617\n",
+      "   macro avg       0.99      0.99      0.99     34617\n",
+      "weighted avg       0.99      0.99      0.99     34617\n",
+      "\n",
       "\n"
      ]
     }
@@ -353,13 +384,13 @@
     "tuned_parameters = [{'kernel': ['rbf'], 'gamma': [1e-3, 1e-4], # Set the parameters by cross-validation\n",
     "                     'C': [100]}]\n",
     "\n",
-    "scores = ['precision', 'recall']\n",
+    "scores = ['f1']\n",
     "\n",
     "for score in scores:\n",
     "    print(\"# Tuning hyper-parameters for %s\" % score)\n",
     "    print()\n",
     "\n",
-    "    clf = GridSearchCV(SVC(), tuned_parameters, scoring='%s_macro' % score)\n",
+    "    clf = GridSearchCV(SVC(), tuned_parameters, scoring='%s' % score)\n",
     "    clf.fit(norm_data, y_vals)\n",
     "\n",
     "    print(\"Best parameters set found on development set:\")\n",
@@ -424,18 +455,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.3"
   }
  },
  "nbformat": 4,
