--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -1,40 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mary Adkisson, Calen Kimmell, and Bethanie Williams\n",
+    "### CSC 5220 Final Project: Malware Detection\n",
+    "### Neural Networks and Support Vector Machine\n",
+    "### November 23, 2020"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "import numpy as np  # importing libraries I will use\n",
+    "# importing libraries we will use\n",
+    "import numpy as np  \n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
+    "%matplotlib inline\n",
+    "import scipy\n",
     "import pandas as pd\n",
-    "import seaborn as sns; sns.set()  # use seaborn plotting defaults\n",
     "from pandas import read_csv\n",
+    "from pandas.plotting import scatter_matrix\n",
     "from scipy import stats\n",
+    "import seaborn as sb\n",
+    "mpl.rcParams['figure.figsize'] = (12, 8)\n",
+    "\n",
+    "\n",
+    "# import modules from sklearn\n",
+    "import sklearn\n",
+    "from sklearn import svm\n",
+    "from sklearn.decomposition import PCA\n",
     "from sklearn.datasets import make_blobs  # many libraries form sklearn\n",
     "from sklearn.datasets import make_circles\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import classification_report\n",
-    "from sklearn.svm import SVC\n",
-    "mpl.rcParams['figure.figsize'] = (12, 8)\n",
-    "\n",
-    "from sklearn import svm\n",
-    "from sklearn import metrics\n",
-    "\n",
-    "import scipy\n",
-    "import numpy\n",
-    "import matplotlib\n",
-    "import pandas\n",
-    "import sklearn\n",
-    "import seaborn as sb\n",
-    "%matplotlib inline\n",
-    "from pandas import read_csv\n",
-    "from pandas.plotting import scatter_matrix\n",
-    "from matplotlib import pyplot\n",
-    "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import cross_val_score\n",
@@ -48,7 +51,7 @@
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.svm import SVC\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "# TensorFlow and tf.keras\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
@@ -335,13 +338,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -380,7 +376,7 @@
    ],
    "source": [
     "# Tuning Hyper-Parameters\n",
-    "# def exhaustive_search():  # make exhaustive grid search function to find the optimal 𝐶 and gamma values\n",
+    "# make exhaustive grid search function to find the optimal 𝐶 and gamma values\n",
     "tuned_parameters = [{'kernel': ['rbf'], 'gamma': [1e-3, 1e-4], # Set the parameters by cross-validation\n",
     "                     'C': [100]}]\n",
     "\n",
@@ -414,40 +410,6 @@
     "    print(classification_report(y_true, y_pred))\n",
     "    print()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# exhaustive_search()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model = LogisticRegression()  # uses built in logistic function\n",
-    "# model.fit(x_train, y_train)\n",
-    "# predicted_classes = model.predict(x_test)  # uses skit learn to compare to results above \n",
-    "# confuse_matrix =confusion_matrix(y_test.flatten(),predicted_classes)\n",
-    "# precision = precision_score(y_test.flatten(),predicted_classes)\n",
-    "# recall = recall_score(y_test.flatten(),predicted_classes)\n",
-    "# F1 = f1_score(y_test.flatten(),predicted_classes)\n",
-    "# accuracy = accuracy_score(y_test.flatten(),predicted_classes)\n",
-    "# roc_auc = roc_auc_score(y_test.flatten(),predicted_classes)\n",
-    "# parameters = model.coef_\n",
-    "\n",
-    "# print('The confusion matrix using scikit-learn is: \\n {}'.format(confuse_matrix))\n",
-    "# print('The precision score using scikit-learn is: {}'.format(precision))\n",
-    "# print('The recall score using scikit-learn is: {}'.format(recall))\n",
-    "# print('The F1 score using scikit-learn is: {}'.format(F1))\n",
-    "# print('The accuracy score using scikit-learn is: {}'.format(accuracy))  # the results of the built in functions on scikit learn\n",
-    "# print('The ROC-AUC score using scikit-learn is: {}'.format(roc_auc))   # are VERY VERY similar to my results above"
-   ]
   }
  ],
  "metadata": {
@@ -455,6 +417,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
