Mary adds comments

--- a/Neural.ipynb
+++ b/Neural.ipynb
@@ -16,6 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import libraries\n",
+    "            \n",
     "import scipy\n",
     "import numpy\n",
     "import pandas\n",
@@ -64,19 +66,18 @@
     }
    ],
    "source": [
-    "#We need to get rid of the md5 hash that since it is a string and all the other \n",
-    "#features are floats\n",
+    "# We need to get rid of the md5 hash that since it is a string and all the other features are floats\n",
     "file_name = 'Kaggle-data.csv'\n",
-    "#When I originally did it there was one extra col that just had nan values so i removed the last one\n",
-    "num_cols=range(0,57)\n",
-    "dataset = read_csv(file_name, header=0, usecols=num_cols)\n",
-    "#Dropped the md5 hash column \n",
+    "# When I originally did it there was one extra col that just had nan values so i removed the last one\n",
+    "num_cols = range(0,57)\n",
+    "dataset = read_csv(file_name, header = 0, usecols = num_cols)\n",
+    "# Dropped the md5 hash column \n",
     "dataset = dataset.drop(['md5'], axis=1)\n",
-    "#Get the y values into a separate dataframe\n",
+    "# Get the y values into a separate dataframe\n",
     "y_vals = dataset.legitimate\n",
     "# shows us the number of instances (rows) that belong to each class\n",
     "print(dataset.groupby('legitimate').size())  \n",
-    "#Drop the y values from the original dataframe \n",
+    "# Drop the y values from the original dataframe \n",
     "dataset = dataset.drop(['legitimate'], axis=1)\n",
     "\n",
     "# 0 means malware, 1 means benign"
@@ -2355,6 +2356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Store X and Y vals\n",
     "X_vals = dataset.iloc[:,:].values #\n",
     "y_vals = y_vals.values"
    ]
@@ -2373,6 +2375,7 @@
     }
    ],
    "source": [
+    "# Normalize the data\n",
     "scaler = MinMaxScaler(feature_range=(0, 1))\n",
     "print(scaler.fit(X_vals))\n",
     "MinMaxScaler()\n",
@@ -2397,6 +2400,7 @@
     }
    ],
    "source": [
+    "# Split data into train and test\n",
     "X_train, X_test, y_train, y_test = train_test_split(norm_data, y_vals, test_size = 0.2, random_state = 0)\n",
     "# X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size = 0.3, random_state = 0)\n",
     "print(\"X-Train Shape:\", X_train.shape)\n",
@@ -2413,26 +2417,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# One-Hot Encoding\n",
     "from keras.utils import to_categorical\n",
     "y_train = to_categorical(y_train)\n",
     "y_test = to_categorical(y_test)\n",
-    "# y_val = to_categorical(y_val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(173081, 2)\n"
-     ]
-    }
-   ],
-   "source": [
+    "# y_val = to_categorical(y_val)\n",
     "print(y_train.shape)"
    ]
   },
@@ -2469,6 +2458,7 @@
     }
    ],
    "source": [
+    "# Build model with 2 hidden layers\n",
     "model = Sequential()\n",
     "model.add(Dense(32, input_dim=55, kernel_initializer='normal', activation='relu'))\n",
     "model.add(Dense(16, kernel_initializer='normal', activation='relu'))\n",
@@ -2535,6 +2525,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Perform hyper-parameter optimization \n",
     "layers = [1,2,3,4,5]\n",
     "neurons = [32,64,128]\n",
     "a_h = ['sigmoid', 'relu']\n",
@@ -2673,6 +2664,7 @@
     }
    ],
    "source": [
+    "# Plot scores and ROC/AUC Curve\n",
     "fpr, tpr, _ = roc_curve(y_test, preds)\n",
     "pyplot.plot(fpr, tpr, marker='.', color='purple', label='ROC curve (AUC = %0.3f)' % roc_auc_score(y_test, preds))\n",
     "# axis labels\n",
