Added timer and more metrics

--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "from scipy import stats\n",
     "import seaborn as sb\n",
     "mpl.rcParams['figure.figsize'] = (12, 8)\n",
-    "\n",
+    "import time\n",
     "\n",
     "# import modules from sklearn\n",
     "import sklearn\n",
@@ -270,9 +270,10 @@
    ],
    "source": [
     "clf = svm.SVC(kernel='linear') # Linear Kernel\n",
-    "\n",
+    "tic = time.perf_counter()\n",
     "#Train the model using the training sets\n",
     "clf.fit(X_train, y_train)\n",
+    "toc = time.perf_counter()\n",
     "\n",
     "#Predict the response for test dataset\n",
     "y_pred = clf.predict(X_test)\n",
@@ -289,7 +290,8 @@
     "print('The recall score is: {}'.format(recall))\n",
     "print('The F1 score is: {}'.format(F1))\n",
     "print('The accuracy score is: {}'.format(accuracy))  # the results of the built in functions on scikit learn\n",
-    "print('The ROC-AUC score is: {}'.format(roc_auc))   # are VERY VERY similar to my results above"
+    "print('The ROC-AUC score is: {}'.format(roc_auc))   # are VERY VERY similar to my results above\n",
+    "print(f\"Time to train {toc - tic:0.4f} seconds\")"
    ]
   },
   {
@@ -314,10 +316,10 @@
    ],
    "source": [
     "clf = svm.SVC(kernel='rbf') # radial basis Kernel\n",
-    "\n",
+    "tic = time.perf_counter()\n",
     "#Train the model using the training sets\n",
     "clf.fit(X_train, y_train)\n",
-    "\n",
+    "toc = time.perf_counter()\n",
     "#Predict the response for test dataset\n",
     "y_pred = clf.predict(X_test)\n",
     "confuse_matrix =confusion_matrix(y_test.flatten(), y_pred)\n",
@@ -333,7 +335,8 @@
     "print('The recall score is: {}'.format(recall))\n",
     "print('The F1 score is: {}'.format(F1))\n",
     "print('The accuracy score is: {}'.format(accuracy))  # the results of the built in functions on scikit learn\n",
-    "print('The ROC-AUC score is: {}'.format(roc_auc))   # are VERY VERY similar to my results above"
+    "print('The ROC-AUC score is: {}'.format(roc_auc))   # are VERY VERY similar to my results above\n",
+    "print(f\"Time to train {toc - tic:0.4f} seconds\")"
    ]
   },
   {
@@ -378,10 +381,10 @@
     "# Tuning Hyper-Parameters\n",
     "# make exhaustive grid search function to find the optimal 𝐶 and gamma values\n",
     "tuned_parameters = [{'kernel': ['rbf'], 'gamma': [1e-3, 1e-4], # Set the parameters by cross-validation\n",
-    "                     'C': [100]}]\n",
+    "                     'C': [1, 10, 100, 1000]}]\n",
     "\n",
     "scores = ['f1']\n",
-    "\n",
+    "tic = time.perf_counter()\n",
     "for score in scores:\n",
     "    print(\"# Tuning hyper-parameters for %s\" % score)\n",
     "    print()\n",
@@ -408,8 +411,31 @@
     "    print()\n",
     "    y_true, y_pred = y_val, clf.predict(X_val)\n",
     "    print(classification_report(y_true, y_pred))\n",
-    "    print()"
+    "    print()\n",
+    "    confuse_matrix =confusion_matrix(y_true.flatten(), y_pred)\n",
+    "    precision = precision_score(y_true.flatten(), y_pred)\n",
+    "    recall = recall_score(y_true.flatten(), y_pred)\n",
+    "    F1 = f1_score(y_true.flatten(), y_pred)\n",
+    "    accuracy = accuracy_score(y_true.flatten(), y_pred)\n",
+    "    roc_auc = roc_auc_score(y_true.flatten(), y_pred)\n",
+    "    # parameters = clf.coef_\n",
+    "\n",
+    "    print('The confusion matrix is: \\n {}'.format(confuse_matrix))\n",
+    "    print('The precision score is: {}'.format(precision))\n",
+    "    print('The recall score is: {}'.format(recall))\n",
+    "    print('The F1 score is: {}'.format(F1))\n",
+    "    print('The accuracy score is: {}'.format(accuracy))  # the results of the built in functions on scikit learn\n",
+    "    print('The ROC-AUC score is: {}'.format(roc_auc))   # are VERY VERY similar to my results above\n",
+    "toc = time.perf_counter()\n",
+    "print(f\"Time to optimize F1 {toc - tic:0.4f} seconds\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -428,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
