Neural is done with comments and labeling

--- a/Neural.ipynb
+++ b/Neural.ipynb
@@ -11,6 +11,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###############################################################################################################################"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1: Import Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -42,7 +56,14 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score, recall_score \n",
     "from sklearn.metrics import f1_score, roc_auc_score, roc_curve, precision_score\n",
-    "from sklearn.svm import SVC\n"
+    "from sklearn.svm import SVC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 2: Import dataset"
    ]
   },
   {
@@ -80,6 +101,13 @@
     "dataset = dataset.drop(['legitimate'], axis=1)\n",
     "\n",
     "# 0 means malware, 1 means benign"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 3: Statistical Summary of Dataset"
    ]
   },
   {
@@ -410,6 +438,13 @@
    ],
    "source": [
     "dataset.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 4: Pairwise Correlation of Features"
    ]
   },
   {
@@ -2350,6 +2385,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 5: Normalizing and Splitting Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -2408,6 +2450,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 6: One-Hot Encoding "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -2434,6 +2483,13 @@
    ],
    "source": [
     "print(y_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 7: Neural Network Model "
    ]
   },
   {
@@ -2504,6 +2560,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 8: Hyper Parameter Optimzation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -2546,24 +2609,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best: 0.997302 using {'L': 4, 'N': 128, 'a_h': 'relu', 'a_o': 'softmax'}\n"
+     "ename": "NameError",
+     "evalue": "name 'grid_result' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-9006f7b3a5bb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Best Hyper Parameters: %f using %s'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mgrid_result\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbest_score_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrid_result\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbest_params_\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mmeans\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgrid_result\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcv_results_\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'mean_test_score'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mstds\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgrid_result\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcv_results_\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'std_test_score'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mparams\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgrid_result\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcv_results_\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'params'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# for mean, stdev, param in zip(means, stds, params):\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'grid_result' is not defined"
      ]
     }
    ],
    "source": [
-    "print('Best: %f using %s' % (grid_result.best_score_, grid_result.best_params_))\n",
+    "print('Best Hyper Parameters: %f using %s' % (grid_result.best_score_, grid_result.best_params_))\n",
     "means = grid_result.cv_results_['mean_test_score']\n",
     "stds = grid_result.cv_results_['std_test_score']\n",
     "params = grid_result.cv_results_['params']\n",
     "# for mean, stdev, param in zip(means, stds, params):\n",
     "#     print('%f (%f) with: %r' % (mean, stdev, param))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 9: Testing Optimal Model with Trained Data"
    ]
   },
   {
@@ -2645,6 +2719,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 10: Print Model Scores"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -2684,10 +2765,10 @@
     "# show the plot\n",
     "pyplot.show()\n",
     "\n",
-    "print('Accuracy:',accuracy_score(y_test, preds))\n",
-    "print('Precision Score:', precision_score(y_test, preds))\n",
-    "print('Recall Score:', recall_score(y_test, preds))\n",
-    "print('F1 Score:', f1_score(y_test, preds))"
+    "print('Accuracy:',accuracy_score(y_train, preds))\n",
+    "print('Precision Score:', precision_score(y_train, preds))\n",
+    "print('Recall Score:', recall_score(y_train, preds))\n",
+    "print('F1 Score:', f1_score(y_train, preds))"
    ]
   }
  ],
