--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -12,6 +12,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###############################################################################################################################"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1: Import Libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -77,6 +93,13 @@
     "from sklearn.metrics import precision_score\n",
     "from sklearn.metrics import f1_score\n",
     "from sklearn.metrics import roc_auc_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 2: Load Dataset"
    ]
   },
   {
@@ -189,6 +212,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 3: Normalize and Split Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -249,6 +279,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 4: SVM Model with Kernel = 'Linear'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -295,6 +332,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 5: SVM Model with Kernel = 'RBF'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -337,6 +381,13 @@
     "print('The accuracy score is: {}'.format(accuracy))  # the results of the built in functions on scikit learn\n",
     "print('The ROC-AUC score is: {}'.format(roc_auc))   # are VERY VERY similar to my results above\n",
     "print(f\"Time to train {toc - tic:0.4f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 6: Hyper-Parameter Optimization"
    ]
   },
   {
@@ -412,22 +463,16 @@
     "    y_true, y_pred = y_val, clf.predict(X_val)\n",
     "    print(classification_report(y_true, y_pred))\n",
     "    print()\n",
-    "    confuse_matrix =confusion_matrix(y_true.flatten(), y_pred)\n",
-    "    precision = precision_score(y_true.flatten(), y_pred)\n",
-    "    recall = recall_score(y_true.flatten(), y_pred)\n",
-    "    F1 = f1_score(y_true.flatten(), y_pred)\n",
-    "    accuracy = accuracy_score(y_true.flatten(), y_pred)\n",
-    "    roc_auc = roc_auc_score(y_true.flatten(), y_pred)\n",
-    "    # parameters = clf.coef_\n",
-    "\n",
-    "    print('The confusion matrix is: \\n {}'.format(confuse_matrix))\n",
-    "    print('The precision score is: {}'.format(precision))\n",
-    "    print('The recall score is: {}'.format(recall))\n",
-    "    print('The F1 score is: {}'.format(F1))\n",
-    "    print('The accuracy score is: {}'.format(accuracy))  # the results of the built in functions on scikit learn\n",
-    "    print('The ROC-AUC score is: {}'.format(roc_auc))   # are VERY VERY similar to my results above\n",
+    "    \n",
     "toc = time.perf_counter()\n",
     "print(f\"Time to optimize F1 {toc - tic:0.4f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 7: Evaluate Optimal Model"
    ]
   },
   {
@@ -435,7 +480,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "C = grid_result.best_params_['C']\n",
+    "gamma = grid_result.best_params_['gamma']\n",
+    "kernel = grid_result.best_params_['kernel']\n",
+    "\n",
+    "clf = svm.SVC(C = C, kernel = kernel, gamma = gamma) # radial basis Kernel\n",
+    "tic = time.perf_counter()\n",
+    "#Train the model using the training sets\n",
+    "clf.fit(X_train, y_train)\n",
+    "toc = time.perf_counter()\n",
+    "#Predict the response for test dataset\n",
+    "y_pred = clf.predict(X_test)\n",
+    "confuse_matrix =confusion_matrix(y_test.flatten(), y_pred)\n",
+    "precision = precision_score(y_test.flatten(), y_pred)\n",
+    "recall = recall_score(y_test.flatten(), y_pred)\n",
+    "F1 = f1_score(y_test.flatten(), y_pred)\n",
+    "accuracy = accuracy_score(y_test.flatten(), y_pred)\n",
+    "roc_auc = roc_auc_score(y_test.flatten(), y_pred)\n",
+    "# parameters = clf.coef_\n",
+    "\n",
+    "print('The confusion matrix is: \\n {}'.format(confuse_matrix))\n",
+    "print('The precision score is: {}'.format(precision))\n",
+    "print('The recall score is: {}'.format(recall))\n",
+    "print('The F1 score is: {}'.format(F1))\n",
+    "print('The accuracy score is: {}'.format(accuracy))  # the results of the built in functions on scikit learn\n",
+    "print('The ROC-AUC score is: {}'.format(roc_auc))   # are VERY VERY similar to my results above\n",
+    "print(f\"Time to train {toc - tic:0.4f} seconds\")"
+   ]
   }
  ],
  "metadata": {
@@ -454,7 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
