--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -11,10 +11,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "###############################################################################################################################"
    ]
@@ -28,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,19 +292,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The confusion matrix is: \n",
+      "[LibSVM]The confusion matrix is: \n",
       " [[27865   274]\n",
       " [  266 14866]]\n",
       "The precision score is: 0.9819022457067371\n",
       "The recall score is: 0.9824213587100185\n",
       "The F1 score is: 0.982161733615222\n",
       "The accuracy score is: 0.9875205102724689\n",
-      "The ROC-AUC score is: 0.9863419917683857\n"
+      "The ROC-AUC score is: 0.9863419917683857\n",
+      "Time to train 123.7543 seconds\n"
      ]
     }
    ],
    "source": [
-    "clf = svm.SVC(kernel='linear') # Linear Kernel\n",
+    "clf = svm.SVC(kernel='linear', verbose=2) # Linear Kernel\n",
     "tic = time.perf_counter()\n",
     "#Train the model using the training sets\n",
     "clf.fit(X_train, y_train)\n",
@@ -347,19 +346,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The confusion matrix is: \n",
+      "[LibSVM]The confusion matrix is: \n",
       " [[28030   109]\n",
       " [  212 14920]]\n",
       "The precision score is: 0.9927473551134474\n",
       "The recall score is: 0.9859899550621201\n",
       "The F1 score is: 0.989357116806472\n",
       "The accuracy score is: 0.9925816366619676\n",
-      "The ROC-AUC score is: 0.9910581638560894\n"
+      "The ROC-AUC score is: 0.9910581638560894\n",
+      "Time to train 100.4327 seconds\n"
      ]
     }
    ],
    "source": [
-    "clf = svm.SVC(kernel='rbf') # radial basis Kernel\n",
+    "clf = svm.SVC(kernel='rbf',verbose=2) # radial basis Kernel\n",
     "tic = time.perf_counter()\n",
     "#Train the model using the training sets\n",
     "clf.fit(X_train, y_train)\n",
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -401,14 +401,108 @@
      "text": [
       "# Tuning hyper-parameters for f1\n",
       "\n",
+      "Fitting 3 folds for each of 8 candidates, totalling 24 fits\n",
+      "[CV] C=1, gamma=0.001, kernel=rbf ....................................\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] ..................... C=1, gamma=0.001, kernel=rbf, total= 8.4min\n",
+      "[CV] C=1, gamma=0.001, kernel=rbf ....................................\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:  8.4min remaining:    0.0s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] ..................... C=1, gamma=0.001, kernel=rbf, total=20.2min\n",
+      "[CV] C=1, gamma=0.001, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1, gamma=0.001, kernel=rbf, total=12.5min\n",
+      "[CV] C=1, gamma=0.0001, kernel=rbf ...................................\n",
+      "[CV] .................... C=1, gamma=0.0001, kernel=rbf, total=16.8min\n",
+      "[CV] C=1, gamma=0.0001, kernel=rbf ...................................\n",
+      "[CV] .................... C=1, gamma=0.0001, kernel=rbf, total=38.5min\n",
+      "[CV] C=1, gamma=0.0001, kernel=rbf ...................................\n",
+      "[CV] .................... C=1, gamma=0.0001, kernel=rbf, total=31.5min\n",
+      "[CV] C=10, gamma=0.001, kernel=rbf ...................................\n",
+      "[CV] .................... C=10, gamma=0.001, kernel=rbf, total= 2.1min\n",
+      "[CV] C=10, gamma=0.001, kernel=rbf ...................................\n",
+      "[CV] .................... C=10, gamma=0.001, kernel=rbf, total= 8.2min\n",
+      "[CV] C=10, gamma=0.001, kernel=rbf ...................................\n",
+      "[CV] .................... C=10, gamma=0.001, kernel=rbf, total= 5.4min\n",
+      "[CV] C=10, gamma=0.0001, kernel=rbf ..................................\n",
+      "[CV] ................... C=10, gamma=0.0001, kernel=rbf, total= 9.5min\n",
+      "[CV] C=10, gamma=0.0001, kernel=rbf ..................................\n",
+      "[CV] ................... C=10, gamma=0.0001, kernel=rbf, total=20.3min\n",
+      "[CV] C=10, gamma=0.0001, kernel=rbf ..................................\n",
+      "[CV] ................... C=10, gamma=0.0001, kernel=rbf, total=12.5min\n",
+      "[CV] C=100, gamma=0.001, kernel=rbf ..................................\n",
+      "[CV] ................... C=100, gamma=0.001, kernel=rbf, total=  40.8s\n",
+      "[CV] C=100, gamma=0.001, kernel=rbf ..................................\n",
+      "[CV] ................... C=100, gamma=0.001, kernel=rbf, total= 4.7min\n",
+      "[CV] C=100, gamma=0.001, kernel=rbf ..................................\n",
+      "[CV] ................... C=100, gamma=0.001, kernel=rbf, total= 2.6min\n",
+      "[CV] C=100, gamma=0.0001, kernel=rbf .................................\n",
+      "[CV] .................. C=100, gamma=0.0001, kernel=rbf, total= 2.2min\n",
+      "[CV] C=100, gamma=0.0001, kernel=rbf .................................\n",
+      "[CV] .................. C=100, gamma=0.0001, kernel=rbf, total= 8.2min\n",
+      "[CV] C=100, gamma=0.0001, kernel=rbf .................................\n",
+      "[CV] .................. C=100, gamma=0.0001, kernel=rbf, total= 5.4min\n",
+      "[CV] C=1000, gamma=0.001, kernel=rbf .................................\n",
+      "[CV] .................. C=1000, gamma=0.001, kernel=rbf, total=  11.0s\n",
+      "[CV] C=1000, gamma=0.001, kernel=rbf .................................\n",
+      "[CV] .................. C=1000, gamma=0.001, kernel=rbf, total= 2.1min\n",
+      "[CV] C=1000, gamma=0.001, kernel=rbf .................................\n",
+      "[CV] .................. C=1000, gamma=0.001, kernel=rbf, total= 1.6min\n",
+      "[CV] C=1000, gamma=0.0001, kernel=rbf ................................\n",
+      "[CV] ................. C=1000, gamma=0.0001, kernel=rbf, total=  41.1s\n",
+      "[CV] C=1000, gamma=0.0001, kernel=rbf ................................\n",
+      "[CV] ................. C=1000, gamma=0.0001, kernel=rbf, total= 2.7min\n",
+      "[CV] C=1000, gamma=0.0001, kernel=rbf ................................\n",
+      "[CV] ................. C=1000, gamma=0.0001, kernel=rbf, total= 2.6min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  24 out of  24 | elapsed: 219.8min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Best parameters set found on development set:\n",
       "\n",
-      "{'C': 100, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+      "{'C': 10, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
       "\n",
       "Grid scores on development set:\n",
       "\n",
-      "0.930 (+/-0.161) for {'C': 100, 'gamma': 0.001, 'kernel': 'rbf'}\n",
-      "0.930 (+/-0.151) for {'C': 100, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
+      "0.802 (+/-0.324) for {'C': 1, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+      "0.683 (+/-0.144) for {'C': 1, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
+      "0.773 (+/-0.340) for {'C': 10, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+      "0.802 (+/-0.324) for {'C': 10, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
+      "0.729 (+/-0.329) for {'C': 100, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+      "0.773 (+/-0.340) for {'C': 100, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
+      "0.695 (+/-0.350) for {'C': 1000, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+      "0.728 (+/-0.329) for {'C': 1000, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
       "\n",
       "Detailed classification report:\n",
       "\n",
@@ -417,14 +511,15 @@
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.99      0.99      0.99     22428\n",
-      "           1       0.98      0.98      0.98     12189\n",
+      "           0       0.98      0.98      0.98     22428\n",
+      "           1       0.96      0.96      0.96     12189\n",
       "\n",
-      "    accuracy                           0.99     34617\n",
-      "   macro avg       0.99      0.99      0.99     34617\n",
-      "weighted avg       0.99      0.99      0.99     34617\n",
+      "    accuracy                           0.97     34617\n",
+      "   macro avg       0.97      0.97      0.97     34617\n",
+      "weighted avg       0.97      0.97      0.97     34617\n",
       "\n",
-      "\n"
+      "\n",
+      "Time to optimize F1 16285.0732 seconds\n"
      ]
     }
    ],
@@ -440,7 +535,7 @@
     "    print(\"# Tuning hyper-parameters for %s\" % score)\n",
     "    print()\n",
     "\n",
-    "    clf = GridSearchCV(SVC(), tuned_parameters, scoring='%s' % score)\n",
+    "    clf = GridSearchCV(SVC(), tuned_parameters, scoring='%s' % score, verbose=2, cv=3)\n",
     "    clf.fit(norm_data, y_vals)\n",
     "\n",
     "    print(\"Best parameters set found on development set:\")\n",
@@ -481,9 +576,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "C = grid_result.best_params_['C']\n",
-    "gamma = grid_result.best_params_['gamma']\n",
-    "kernel = grid_result.best_params_['kernel']\n",
+    "C = clf.best_params_['C']\n",
+    "gamma = clf.best_params_['gamma']\n",
+    "kernel = clf.best_params_['kernel']\n",
     "\n",
     "clf = svm.SVC(C = C, kernel = kernel, gamma = gamma) # radial basis Kernel\n",
     "tic = time.perf_counter()\n",
@@ -508,6 +603,13 @@
     "print('The ROC-AUC score is: {}'.format(roc_auc))   # are VERY VERY similar to my results above\n",
     "print(f\"Time to train {toc - tic:0.4f} seconds\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
