Changed cv to 1

--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -535,7 +535,7 @@
     "    print(\"# Tuning hyper-parameters for %s\" % score)\n",
     "    print()\n",
     "\n",
-    "    clf = GridSearchCV(SVC(), tuned_parameters, scoring='%s' % score, verbose=2, cv=3)\n",
+    "    clf = GridSearchCV(SVC(), tuned_parameters, scoring='%s' % score, verbose=2, cv=1)\n",
     "    clf.fit(norm_data, y_vals)\n",
     "\n",
     "    print(\"Best parameters set found on development set:\")\n",
@@ -572,9 +572,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The confusion matrix is: \n",
+      " [[27516   623]\n",
+      " [  767 14365]]\n",
+      "The precision score is: 0.9584334133973845\n",
+      "The recall score is: 0.9493127147766323\n",
+      "The F1 score is: 0.9538512616201859\n",
+      "The accuracy score is: 0.9678768690346884\n",
+      "The ROC-AUC score is: 0.9635863122552268\n",
+      "Time to train 1735.1327 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "C = clf.best_params_['C']\n",
     "gamma = clf.best_params_['gamma']\n",
