--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -300,7 +300,7 @@
       "The F1 score is: 0.982161733615222\n",
       "The accuracy score is: 0.9875205102724689\n",
       "The ROC-AUC score is: 0.9863419917683857\n",
-      "Time to train 123.7543 seconds\n"
+      "Time to train 124.8690 seconds\n"
      ]
     }
    ],
@@ -354,7 +354,7 @@
       "The F1 score is: 0.989357116806472\n",
       "The accuracy score is: 0.9925816366619676\n",
       "The ROC-AUC score is: 0.9910581638560894\n",
-      "Time to train 100.4327 seconds\n"
+      "Time to train 101.3249 seconds\n"
      ]
     }
    ],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -401,8 +401,8 @@
      "text": [
       "# Tuning hyper-parameters for f1\n",
       "\n",
-      "Fitting 3 folds for each of 8 candidates, totalling 24 fits\n",
-      "[CV] C=1, gamma=0.001, kernel=rbf ....................................\n"
+      "Fitting 2 folds for each of 6 candidates, totalling 12 fits\n",
+      "[CV] C=10, gamma=0.001, kernel=rbf ...................................\n"
      ]
     },
     {
@@ -416,110 +416,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] ..................... C=1, gamma=0.001, kernel=rbf, total= 8.4min\n",
-      "[CV] C=1, gamma=0.001, kernel=rbf ....................................\n"
+      "[CV] .................... C=10, gamma=0.001, kernel=rbf, total= 1.0min\n",
+      "[CV] C=10, gamma=0.001, kernel=rbf ...................................\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:  8.4min remaining:    0.0s\n"
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:  1.0min remaining:    0.0s\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] ..................... C=1, gamma=0.001, kernel=rbf, total=20.2min\n",
-      "[CV] C=1, gamma=0.001, kernel=rbf ....................................\n",
-      "[CV] ..................... C=1, gamma=0.001, kernel=rbf, total=12.5min\n",
-      "[CV] C=1, gamma=0.0001, kernel=rbf ...................................\n",
-      "[CV] .................... C=1, gamma=0.0001, kernel=rbf, total=16.8min\n",
-      "[CV] C=1, gamma=0.0001, kernel=rbf ...................................\n",
-      "[CV] .................... C=1, gamma=0.0001, kernel=rbf, total=38.5min\n",
-      "[CV] C=1, gamma=0.0001, kernel=rbf ...................................\n",
-      "[CV] .................... C=1, gamma=0.0001, kernel=rbf, total=31.5min\n",
-      "[CV] C=10, gamma=0.001, kernel=rbf ...................................\n",
-      "[CV] .................... C=10, gamma=0.001, kernel=rbf, total= 2.1min\n",
-      "[CV] C=10, gamma=0.001, kernel=rbf ...................................\n",
-      "[CV] .................... C=10, gamma=0.001, kernel=rbf, total= 8.2min\n",
-      "[CV] C=10, gamma=0.001, kernel=rbf ...................................\n",
-      "[CV] .................... C=10, gamma=0.001, kernel=rbf, total= 5.4min\n",
+      "[CV] .................... C=10, gamma=0.001, kernel=rbf, total= 6.9min\n",
       "[CV] C=10, gamma=0.0001, kernel=rbf ..................................\n",
-      "[CV] ................... C=10, gamma=0.0001, kernel=rbf, total= 9.5min\n",
+      "[CV] ................... C=10, gamma=0.0001, kernel=rbf, total= 6.3min\n",
       "[CV] C=10, gamma=0.0001, kernel=rbf ..................................\n",
-      "[CV] ................... C=10, gamma=0.0001, kernel=rbf, total=20.3min\n",
-      "[CV] C=10, gamma=0.0001, kernel=rbf ..................................\n",
-      "[CV] ................... C=10, gamma=0.0001, kernel=rbf, total=12.5min\n",
+      "[CV] ................... C=10, gamma=0.0001, kernel=rbf, total=14.7min\n",
       "[CV] C=100, gamma=0.001, kernel=rbf ..................................\n",
-      "[CV] ................... C=100, gamma=0.001, kernel=rbf, total=  40.8s\n",
+      "[CV] ................... C=100, gamma=0.001, kernel=rbf, total=  11.9s\n",
       "[CV] C=100, gamma=0.001, kernel=rbf ..................................\n",
-      "[CV] ................... C=100, gamma=0.001, kernel=rbf, total= 4.7min\n",
-      "[CV] C=100, gamma=0.001, kernel=rbf ..................................\n",
-      "[CV] ................... C=100, gamma=0.001, kernel=rbf, total= 2.6min\n",
+      "[CV] ................... C=100, gamma=0.001, kernel=rbf, total= 2.1min\n",
       "[CV] C=100, gamma=0.0001, kernel=rbf .................................\n",
-      "[CV] .................. C=100, gamma=0.0001, kernel=rbf, total= 2.2min\n",
+      "[CV] .................. C=100, gamma=0.0001, kernel=rbf, total= 1.0min\n",
       "[CV] C=100, gamma=0.0001, kernel=rbf .................................\n",
-      "[CV] .................. C=100, gamma=0.0001, kernel=rbf, total= 8.2min\n",
-      "[CV] C=100, gamma=0.0001, kernel=rbf .................................\n",
-      "[CV] .................. C=100, gamma=0.0001, kernel=rbf, total= 5.4min\n",
+      "[CV] .................. C=100, gamma=0.0001, kernel=rbf, total= 6.9min\n",
       "[CV] C=1000, gamma=0.001, kernel=rbf .................................\n",
-      "[CV] .................. C=1000, gamma=0.001, kernel=rbf, total=  11.0s\n",
+      "[CV] .................. C=1000, gamma=0.001, kernel=rbf, total=   2.5s\n",
       "[CV] C=1000, gamma=0.001, kernel=rbf .................................\n",
-      "[CV] .................. C=1000, gamma=0.001, kernel=rbf, total= 2.1min\n",
-      "[CV] C=1000, gamma=0.001, kernel=rbf .................................\n",
-      "[CV] .................. C=1000, gamma=0.001, kernel=rbf, total= 1.6min\n",
+      "[CV] .................. C=1000, gamma=0.001, kernel=rbf, total=  53.6s\n",
       "[CV] C=1000, gamma=0.0001, kernel=rbf ................................\n",
-      "[CV] ................. C=1000, gamma=0.0001, kernel=rbf, total=  41.1s\n",
+      "[CV] ................. C=1000, gamma=0.0001, kernel=rbf, total=  12.3s\n",
       "[CV] C=1000, gamma=0.0001, kernel=rbf ................................\n",
-      "[CV] ................. C=1000, gamma=0.0001, kernel=rbf, total= 2.7min\n",
-      "[CV] C=1000, gamma=0.0001, kernel=rbf ................................\n",
-      "[CV] ................. C=1000, gamma=0.0001, kernel=rbf, total= 2.6min\n"
+      "[CV] ................. C=1000, gamma=0.0001, kernel=rbf, total= 2.1min\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  24 out of  24 | elapsed: 219.8min finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best parameters set found on development set:\n",
-      "\n",
-      "{'C': 10, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
-      "\n",
-      "Grid scores on development set:\n",
-      "\n",
-      "0.802 (+/-0.324) for {'C': 1, 'gamma': 0.001, 'kernel': 'rbf'}\n",
-      "0.683 (+/-0.144) for {'C': 1, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
-      "0.773 (+/-0.340) for {'C': 10, 'gamma': 0.001, 'kernel': 'rbf'}\n",
-      "0.802 (+/-0.324) for {'C': 10, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
-      "0.729 (+/-0.329) for {'C': 100, 'gamma': 0.001, 'kernel': 'rbf'}\n",
-      "0.773 (+/-0.340) for {'C': 100, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
-      "0.695 (+/-0.350) for {'C': 1000, 'gamma': 0.001, 'kernel': 'rbf'}\n",
-      "0.728 (+/-0.329) for {'C': 1000, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
-      "\n",
-      "Detailed classification report:\n",
-      "\n",
-      "The model is trained on the full development set.\n",
-      "The scores are computed on the full evaluation set.\n",
-      "\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.98      0.98      0.98     22428\n",
-      "           1       0.96      0.96      0.96     12189\n",
-      "\n",
-      "    accuracy                           0.97     34617\n",
-      "   macro avg       0.97      0.97      0.97     34617\n",
-      "weighted avg       0.97      0.97      0.97     34617\n",
-      "\n",
-      "\n",
-      "Time to optimize F1 16285.0732 seconds\n"
+      "[Parallel(n_jobs=1)]: Done  12 out of  12 | elapsed: 42.5min finished\n"
      ]
     }
    ],
@@ -527,7 +466,7 @@
     "# Tuning Hyper-Parameters\n",
     "# make exhaustive grid search function to find the optimal 𝐶 and gamma values\n",
     "tuned_parameters = [{'kernel': ['rbf'], 'gamma': [1e-3, 1e-4], # Set the parameters by cross-validation\n",
-    "                     'C': [1, 10, 100, 1000]}]\n",
+    "                     'C': [10, 100, 1000]}]\n",
     "\n",
     "scores = ['f1']\n",
     "tic = time.perf_counter()\n",
@@ -535,7 +474,7 @@
     "    print(\"# Tuning hyper-parameters for %s\" % score)\n",
     "    print()\n",
     "\n",
-    "    clf = GridSearchCV(SVC(), tuned_parameters, scoring='%s' % score, verbose=2, cv=1)\n",
+    "    clf = GridSearchCV(SVC(), tuned_parameters, scoring='%s' % score, verbose=2, cv=2)\n",
     "    clf.fit(norm_data, y_vals)\n",
     "\n",
     "    print(\"Best parameters set found on development set:\")\n",
@@ -572,30 +511,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The confusion matrix is: \n",
-      " [[27516   623]\n",
-      " [  767 14365]]\n",
-      "The precision score is: 0.9584334133973845\n",
-      "The recall score is: 0.9493127147766323\n",
-      "The F1 score is: 0.9538512616201859\n",
-      "The accuracy score is: 0.9678768690346884\n",
-      "The ROC-AUC score is: 0.9635863122552268\n",
-      "Time to train 1735.1327 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "C = clf.best_params_['C']\n",
     "gamma = clf.best_params_['gamma']\n",
     "kernel = clf.best_params_['kernel']\n",
-    "\n",
+    "print(C)\n",
+    "print(gamma)\n",
+    "print(kernel)\n",
     "clf = svm.SVC(C = C, kernel = kernel, gamma = gamma) # radial basis Kernel\n",
     "tic = time.perf_counter()\n",
     "#Train the model using the training sets\n",
